--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -36,6 +36,7 @@
     <center>
     <h1 id="">Browse Courses</h1>
     <hr>
+    {%comment%}
       <form action="{% url 'api_data' %}" method="get">
           {% csrf_token %}
       <select name="classes" id="classes">
@@ -455,6 +456,7 @@
           });
         </script> -->
   </form>
+  {%endcomment%}
   <br>
   <br>
   <form action="{% url 'api_data_search' %}" method="get">
@@ -492,53 +494,7 @@
       </div>
     </tr>
       
-    {% for course, time in dict.items %}
-    {% for class_object, class in content %}
-    <tr class = "main-rows">
-        <div class = "row"> 
-            <div class = "col col-lg-3 col-md-3 col-sm-3"> 
-              <td >{{class.subject}} {{class.catalog_nbr}}</td>
-            </div>
-            <div class = "col col-lg-3 col-md-3 col-sm-3"> 
-              <td>{{class.descr}}</td>
-            </div>
-            <div class = "col col-lg-3 col-md-3 col-sm-3"> 
-              <td>{{class.section_type}} ({{class.units}})</td>
-            </div>
-            <div class = "col col-lg-3 col-md-3 col-sm-3">
-              {% if class_object.course_start_time != "" %}
-                <td>{{class_object.course_days_of_week}} {{class_object.course_start_time}} - {{class_object.course_end_time}}</td>
-              {% else %}
-              <td>TBA</td>
-              {% endif %}
-            </div>
-            <div class = "col col-lg-3 col-md-3 col-sm-3"> 
-              <td>{{class.instructors.0.name}}</td>
-            </div>
-            <div class = "col col-lg-3 col-md-3 col-sm-3">
-              {% if class.enrollment_total >= class.class_capacity %}
-                 <td> Class is Full</td>
-               {% else %}
-                 <td> {{class.enrollment_total}}/{{class.class_capacity}}</td>
-               {% endif %}
-           </div>
-        </div>
-        {% if class.enrollment_total >= class.class_capacity %}
-        <td> Cannot Add Course To Cart</td>
-      {% else %}
-        <td> <form method="POST" action="{% url 'addToCart' class_object.pk%}">
-        {% csrf_token %}
-        <input type="hidden" name="pk" value="{{ class_object.pk }}">
-        <button type="submit" class = "btn btn-primary btn-sm buttonShoppingCartandBrowseCourses">Add to Cart
-          <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-          </svg>
-        </button>
-      </form> </td>
-      {% endif %}
-    </tr>
-    {% endfor %}
-    {% for course in courses %}
+    {% for course, enrollment in dict.items %}
     <tr class = "main-rows">
         <div class = "row"> 
             <div class = "col col-lg-3 col-md-3 col-sm-3"> 
@@ -554,17 +510,22 @@
               {% if course.course_start_time != "" %}
                 <td>{{course.course_days_of_week}} {{course.course_start_time}} - {{course.course_end_time}}</td>
               {% else %}
-                <td>TBA</td>
+              <td>TBA</td>
               {% endif %}
             </div>
             <div class = "col col-lg-3 col-md-3 col-sm-3"> 
               <td>{{course.course_instructor}}</td>
             </div>
-            <div class = "col col-lg-3 col-md-3 col-sm-3"> 
-              <td>{{time}}/{{course.course_size}}</td>
-            </div>
+            <div class = "col col-lg-3 col-md-3 col-sm-3">
+              <td> {{enrollment}}/{{course.course_size}}</td>
+           </div>
         </div>
-      <td>
+        {%comment%}
+        {% if course.enrollment_total >= course.class_capacity %}
+        <td> Cannot Add Course To Cart</td>
+        {% else %}
+        {%endcomment%}
+        <td> 
         <form method="POST" action="{% url 'addToCart' course.pk%}">
           {% csrf_token %}
           <input type="hidden" name="pk" value="{{ course.pk }}">
@@ -573,10 +534,14 @@
               <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
             </svg>
           </button>
-        </form>
-      </td>
+        </form> 
+        </td>
+        {%comment%}
+        {% endif %}
+        {%endcomment%}
     </tr>
     {% endfor %}
+    
   </table>
 </body>
 
