--- a/myapp/templates/myapp/profile.html
+++ b/myapp/templates/myapp/profile.html
@@ -51,11 +51,8 @@
         <h4 style="font-weight: bold;">Status: Schedule Not Submitted <i class="fa-light fa-memo-circle-check" style="color: #07cf1f;"></i></h4>
       {% elif usersSchedule.isRejected%}
         <h4 style="font-weight: bold;">Schedule Status: Rejected By Advisor <i class="fa-regular fa-circle-xmark" style="color: #ec1349;"></i></h4>
-      {% elif usersSchedule.status %}
-        <h4 style="font-weight: bold;">Schedule Status: Approved By Advisor <i class="fa-solid fa-square-check" style="color: #46b458;"></i></h4>
-      
         <br>
-        <p style = "color: gray; font-size: 12px;">Your Approved Schedule:</p>
+        <p style = "font-size: 18px; font-weight: bolder;">Your Rejected Schedule:</p>
         <thead>
           <table class = "table" style="border-collapse: collapse;
           margin: 25px 0;
@@ -80,18 +77,86 @@
             </tr>
           </thead>
           {% for course in usersSchedule.courses.all %}
-            <tr>
-              <td>{{course.course_subject}}</td>
-              <td>{{course.course_days_of_week}}</td>
-              <td>{{course.course_start_time}} - {{course.course_end_time}}</td>
+            <tr  class = "main-rows" style = "border-bottom: 1px solid #dddddd;background-color: light gray;">
+              <td style="font-weight: bold;">{{course.course_subject}}</td>
+              <td style="font-weight: bold;">{{course.course_days_of_week}}</td>
+              <td style="font-weight: bold;">{{course.course_start_time}} - {{course.course_end_time}}</td>
             </tr>
           {% endfor %} 
-          
-
+        </table>
+        <br>
+      {% elif usersSchedule.status %}
+        <h4 style="font-weight: bold;">Schedule Status: Approved By Advisor <i class="fa-solid fa-square-check" style="color: #46b458;"></i></h4>
+        <br>
+        <p style = "font-size: 18px; font-weight: bolder;">Your Approved Schedule:</p>
+        <thead>
+          <table class = "table" style="border-collapse: collapse;
+          margin: 25px 0;
+          font-size: 0.9em;
+          font-family: sans-serif;
+          min-width: 400px;
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);">
+            <tr class = "title-row" style = "background-color: rgb(79, 78, 78);
+            color: #ffffff;
+            text-align: center;">
+            <div class = "row">
+              <div class = "col col-lg-2 col-md-2 col-sm-2"> 
+                <th>Course</th>
+              </div>
+              <div class = "col col-lg-2 col-md-2 col-sm-2"> 
+                <th>Days</th>
+              </div>
+              <div class = "col col-lg-2 col-md-2 col-sm-2"> 
+              <th>Time</th>
+              </div>
+            </div>
+            </tr>
+          </thead>
+          {% for course in usersSchedule.courses.all %}
+            <tr  class = "main-rows" style = "border-bottom: 1px solid #dddddd;background-color: light gray;">
+              <td style="font-weight: bold;">{{course.course_subject}}</td>
+              <td style="font-weight: bold;">{{course.course_days_of_week}}</td>
+              <td style="font-weight: bold;">{{course.course_start_time}} - {{course.course_end_time}}</td>
+            </tr>
+          {% endfor %} 
         </table>
         <br>
         {% else %}
-        <h4 style="font-weight: bold;">Schedule Status: Pending(Waiting On Advisor)<i class="fa-regular fa-hourglass" style="color: #e0d900;"></i></h4>
+        <h4 style="font-weight: bold;">Schedule Status: Pending (Waiting On Advisor)<i class="fa-regular fa-hourglass" style="color: #e0d900;"></i></h4>
+        <br>
+        <p style = "font-size: 18px; font-weight: bolder;">Your Submitted Schedule:</p>
+        <thead>
+          <table class = "table" style="border-collapse: collapse;
+          margin: 25px 0;
+          font-size: 0.9em;
+          font-family: sans-serif;
+          min-width: 400px;
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);">
+            <tr class = "title-row" style = "background-color: rgb(79, 78, 78);
+            color: #ffffff;
+            text-align: center;">
+            <div class = "row">
+              <div class = "col col-lg-2 col-md-2 col-sm-2"> 
+                <th>Course</th>
+              </div>
+              <div class = "col col-lg-2 col-md-2 col-sm-2"> 
+                <th>Days</th>
+              </div>
+              <div class = "col col-lg-2 col-md-2 col-sm-2"> 
+              <th>Time</th>
+              </div>
+            </div>
+            </tr>
+          </thead>
+          {% for course in usersSchedule.courses.all %}
+            <tr  class = "main-rows" style = "border-bottom: 1px solid #dddddd;background-color: light gray;">
+              <td style="font-weight: bold;">{{course.course_subject}}</td>
+              <td style="font-weight: bold;">{{course.course_days_of_week}}</td>
+              <td style="font-weight: bold;">{{course.course_start_time}} - {{course.course_end_time}}</td>
+            </tr>
+          {% endfor %} 
+        </table>
+        <br>
       {% endif %}
         
         <br>
