--- a/myapp/templates/account/logout.html
+++ b/myapp/templates/account/logout.html
@@ -57,20 +57,20 @@
 <body class="banner">
   <div id="splashPageText">
     <div id="innerSplashPageBoxLogInScreen">
-      <h1>{% trans "Sign Out" %}</h1>
+      <h1>{% trans "Log Out" %}</h1>
 
-      <p>{% trans 'Are you sure you want to sign out?' %}</p>
+      <p>{% trans 'Are you sure you want to Log out?' %}</p>
       <div>
-        <form method="post" action="{% url 'account_logout' %}">
+        <form method="post" action="{% url 'account_logout' %}" style="margin-bottom: 4px;">
           <div>
           {% csrf_token %}
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
           {% endif %}
-          <button type="submit" class = "btn btn-dark btn-lg">{% trans 'Sign Out' %}</button>
+          <button type="submit" class = "btn btn-dark btn-lg">{% trans 'Log Out' %}</button>
           </div>
         </form>
-
+      
         <form action="/accounts/profile">
           <div>
           <button class ="btn btn-light btn-lg btn-outline-dark" style="border-width: 2px;">Cancel</button>
