Added Copywrite footer to pages.

--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -112,5 +112,6 @@
   #https://www.youtube.com/watch?v=rjxpL89BEX4
   {% endblock %}
 
- 
-  <p class = "footer"></p>
+ <div class = "container" style = "text-align : center">
+  <p class = "footer" style="color: grey; text-align : center">Copyright 2023. Ethan Ogilvie, Spencer Hernandez, Adarsh Mohanraju, Cameron Greene, Joel Valliath</p>
+ </div>
