--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
 <!--Inspiration: https://codepen.io/alvarotrigo/pen/KKQzvdr -->
-<html>
+
   <title>Calendar</title>
   {% extends 'myapp/base.html'%}
   {% load static %}
@@ -294,6 +293,7 @@
   </form>
 <hr>
 </center>
+</div>
   </body>
 
   {% endblock %}
