--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -6,6 +6,7 @@
 <html>
 <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
 <link rel="icon" href="{% static 'myapp/University_of_Virginia_Rotunda_logo.svg' %}">
+<script src="https://use.fontawesome.com/releases/v6.1.1/js/all.js"></script>
 {# Load the tag library #}
 {% load bootstrap5 %}
 
@@ -37,13 +38,7 @@
     <h1 id="">Browse Courses</h1>
     <hr>
           {% csrf_token %}
-    <form action="{% url 'api_data_search' %}" method="get">
-      {%csrf_token%}
-      </select>
-      <input class="form-control form-control-sm" type="text" name ="query" id="query" placeholder="Search Courses!"> <!-- Add the search input field -->
-      <button id = "search-button" type="submit" style = "margin-top: 2px">Submit</button>
-    </form> 
-    <br>
+    {% comment %}
     <div id="filter-dropdown" style="display:none;">
       <h4> Find Specific Classes In Department</h4> 
       <select name="classes" id="mnemonic">
@@ -65,6 +60,18 @@
           <option value="">Time</option>
         </select>
     </div>
+    {% endcomment %}
+    <br>
+    <div class = "container" style = "justify-content: center;">
+    <form action="{% url 'api_data_search' %}" method="get" style = "display: flex; justify-content: center; height: 40px">
+      {%csrf_token%}
+      <i class="fa-solid fa-magnifying-glass" style = "align-self: center; padding: 10px 20px; background-color: white;"> </i>
+      <input class="form-control form-control-sm" type="text" name ="query" id="query" style = "font-family: 'Poppins', sans-serif; box-sizing: border-box; width: 50%; border: none; outline: none" placeholder="Search Courses!"> <!-- Add the search input field -->
+      <button id = "search-button" type="submit" style = "margin-left: 5px; margin-top: 4px;">Submit</button>
+    </form> 
+  </div>
+    <br>
+    {% comment %}
       <script>
           document.getElementById('search-button').addEventListener('click', function() {
           document.getElementById('filter-dropdown').style.display = 'block';
@@ -109,7 +116,7 @@
           //   }
           //   return end_time;
           // }
-          const classes = JSON.parse('{{ courses_json|safe }}');
+          const classes = JSON.parse('{{ courses|safe }}');
           console.log(classes);
           const subjectSelect = document.getElementById('mnemonic')
           const nameSelect = document.getElementById('classes');
@@ -327,7 +334,7 @@
         // }
         });
       </script>
-  <br>
+      {% endcomment %}
 </center>
   <br>
   <table id = "class-table" style="width:100%">
