Fixed conflict toggler not popping up due to the number of courses in cart and calendar being equal.

--- a/myapp/templates/myapp/shoppingCart.html
+++ b/myapp/templates/myapp/shoppingCart.html
@@ -53,7 +53,9 @@
   <div id ="SignedInScreenInnerContainer" class = "container">
     <center>
     <h1>Shopping Cart</h1>
-    {% if courses_in_calendar|length >= 1 and courses_in_cart|length != courses_in_calendar|length and courses_in_cart|length != 0 %}
+    <!--https://www.w3schools.com/django/django_template_variables.php-->
+    
+    {% if courses_in_calendar|length >= 1 and courses_in_cart|length != 0 %}
     <form method="POST" action="{% url 'shoppingCart' %}">
       {% csrf_token %}
     <div class="form-check form-switch" style = "left: 50%; position: absolute;-ms-transform: translateX(-50%);
@@ -63,6 +65,7 @@
     </div>
     </form>
     <br>
+    <p style = "color: gray; font-size: 10px;">*When toggled, will highlight courses conflicting with those in your schedule</p>
     {% endif %}
   </center>
   {% if courses_in_cart|length == 0 %}
